SubBt/force-app/main/default/objects/Closing__c/Closing__c.object-meta.xml
<CustomObject>
    <label>Closing</label>
    <nameField>
        <label>Closing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Closings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>