SubBt/force-app/main/default/objects/Closing__c/fields/Appraisal__c.field-meta.xml
<CustomField>
    <fullName>Appraisal__c</fullName>
    <label>Appraisal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>