SubBt/force-app/main/default/objects/Closing__c/fields/Completion_Date_Appraisal__c.field-meta.xml
<CustomField>
    <fullName>Completion_Date_Appraisal__c</fullName>
    <label>Completion Date (Appraisal)</label>
    <type>Date</type>
</CustomField>