SubBt/force-app/main/default/objects/Closing__c/fields/Completion_Date_Bank_Approval__c.field-meta.xml
<CustomField>
    <fullName>Completion_Date_Bank_Approval__c</fullName>
    <label>Completion Date (Bank Approval)</label>
    <type>Date</type>
</CustomField>