SubBt/force-app/main/default/objects/Closing__c/fields/Completion_Date_Escrow_Closing__c.field-meta.xml
<CustomField>
    <fullName>Completion_Date_Escrow_Closing__c</fullName>
    <label>Completion Date (Escrow Closing)</label>
    <type>Date</type>
</CustomField>