SubBt/force-app/main/default/objects/Closing__c/fields/Completion_Date_Inspections__c.field-meta.xml
<CustomField>
    <fullName>Completion_Date_Inspections__c</fullName>
    <label>Completion Date (Inspections)</label>
    <type>Date</type>
</CustomField>