SubBt/force-app/main/default/objects/Closing__c/fields/Completion_Date_Title__c.field-meta.xml
<CustomField>
    <fullName>Completion_Date_Title__c</fullName>
    <label>Completion Date (Title)</label>
    <type>Date</type>
</CustomField>