SubBt/force-app/main/default/objects/Closing__c/fields/Conditions__c.field-meta.xml
<CustomField>
    <fullName>Conditions__c</fullName>
    <label>Conditions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>