SubBt/force-app/main/default/objects/Closing__c/fields/Escrow_Closign_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Closign_Instructions__c</fullName>
    <label>Escrow Closign Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>