SubBt/force-app/main/default/objects/Closing__c/fields/Lender__c.field-meta.xml
<CustomField>
    <fullName>Lender__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lender</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Closings (Lender)</relationshipLabel>
    <relationshipName>Closings1</relationshipName>
    <type>Lookup</type>
</CustomField>