SubBt/force-app/main/default/objects/Closing__c/fields/Listing_Company__c.field-meta.xml
<CustomField>
    <fullName>Listing_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Listing Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Closings (Listing Company)</relationshipLabel>
    <relationshipName>Closings2</relationshipName>
    <type>Lookup</type>
</CustomField>