SubBt/force-app/main/default/objects/Closing__c/fields/Selling_Company__c.field-meta.xml
<CustomField>
    <fullName>Selling_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Selling Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Closings (Selling Company)</relationshipLabel>
    <relationshipName>Closings3</relationshipName>
    <type>Lookup</type>
</CustomField>