SubBt/force-app/main/default/objects/Closing__c/fields/Target_Closing_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Closing_Date__c</fullName>
    <label>Target Closing Date</label>
    <type>Date</type>
</CustomField>