SubBt/force-app/main/default/objects/Closing__c/fields/Title_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Title_Order_Number__c</fullName>
    <label>Title Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>