SubBt/force-app/main/default/objects/Closing__c/fields/Title_Report__c.field-meta.xml
<CustomField>
    <fullName>Title_Report__c</fullName>
    <label>Title Report</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Not Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>